WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143891
[ES6] Fix name enumeration of static functions for Symbol constructor
https://bugs.webkit.org/show_bug.cgi?id=143891
Summary
[ES6] Fix name enumeration of static functions for Symbol constructor
Yusuke Suzuki
Reported
2015-04-17 12:22:31 PDT
[ES6] Fix name enumeration of static functions for Symbol constructor
Attachments
Patch
(6.36 KB, patch)
2015-04-17 12:31 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2015-04-17 12:31:31 PDT
Created
attachment 251039
[details]
Patch
Geoffrey Garen
Comment 2
2015-04-17 13:33:44 PDT
Comment on
attachment 251039
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2015-04-17 14:23:44 PDT
Comment on
attachment 251039
[details]
Patch Clearing flags on attachment: 251039 Committed
r182967
: <
http://trac.webkit.org/changeset/182967
>
WebKit Commit Bot
Comment 4
2015-04-17 14:23:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug