[ES6] Fix name enumeration of static functions for Symbol constructor https://bugs.webkit.org/show_bug.cgi?id=143891

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

Fix missing symbolPrototypeTable registration to the js class object.
This patch fixes name enumeration of static functions (Symbol.key, Symbol.keyFor) for Symbol constructor.

* runtime/SymbolConstructor.cpp:

LayoutTests:

Add property names tests for Symbol constructor, Symbol object and Symbol.prototype.

* js/Object-getOwnPropertyNames-expected.txt: Removed.
* js/script-tests/Object-getOwnPropertyNames.js:


Canonical link: https://commits.webkit.org/161900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182967 268f45cc-cd09-0410-ab3c-d52691b4dbfc